# care_dispatch

./: LICENSE  README.md  pyproject.toml  requirements.txt
care_dispatch.egg-info/: PKG-INFO  SOURCES.txt
configs/baseline/: pure_heuristic.yaml  rolling_alns.yaml  rolling_ortools.yaml
configs/env/: rc101_default.yaml
configs/experiment/: benchmark.yaml  gat_ablation.yaml  remaining_ablation.yaml  sanity_check.yaml  zero_shot_spatial.yaml
configs/model/: gat_ppo.yaml  gat_ppo_nomask.yaml  gat_ppo_nopreempt.yaml  mlp_ppo.yaml
src/baselines/: base_policy.py  pure_heuristic_policy.py  rolling_alns_policy.py  rolling_ortools_policy.py
src/common/: logger.py  paths.py  seed.py
src/data/: scenario_builder.py  solomon_loader.py  task_generator.py  worker_generator.py
src/env/: dispatch_env.py  entities.py  event_queue.py  metrics.py  state_builder.py
src/exact/: small_mip_solver.py
src/experiments/: evaluator.py  model_policy.py  plotter.py  statistics.py  training.py
src/graph/: graph_builder.py
src/heuristics/: cost.py  delay_propagation.py  insertion.py  legality.py  preemption.py
tests/: conftest.py  sitecustomize.py  test_action_mask.py  test_benchmark_policies.py  test_distance.py  test_emergency_response_metric.py  test_env_step.py  test_insertion.py  test_nomask_illegal_action.py  test_preemption_toggle.py  test_reward_cost_consistency.py  test_route_simulation.py  test_zero_shot_config.py
