[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "care-dispatch"
version = "0.1.0"
description = "Dynamic care dispatch simulation and PPO training project"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
